[gd_scene load_steps=47 format=3 uid="uid://dk3cjc74xm8k0"]

[ext_resource type="Script" uid="uid://bdxnp2lgdqy4y" path="res://scripts/enemies/king_crab/king_crab.gd" id="1_ta3rv"]
[ext_resource type="Texture2D" uid="uid://b1jgjecjn1uvr" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_25.png" id="2_muf1s"]
[ext_resource type="Texture2D" uid="uid://sn84pw2smv0j" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_26.png" id="3_ybdky"]
[ext_resource type="Texture2D" uid="uid://bk7n0dec4ug14" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_27.png" id="4_xn2er"]
[ext_resource type="Texture2D" uid="uid://cln7wn2wfc1wh" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_28.png" id="5_1gcnt"]
[ext_resource type="Texture2D" uid="uid://bvug812ite5wi" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_29.png" id="6_bdue4"]
[ext_resource type="Texture2D" uid="uid://bcdxpibvl7orv" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_30.png" id="7_ih4yw"]
[ext_resource type="Texture2D" uid="uid://bn6p5lqns3hxi" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_1.png" id="8_5tar6"]
[ext_resource type="Texture2D" uid="uid://cdn2pe34aomvv" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_2.png" id="9_0qm4p"]
[ext_resource type="Texture2D" uid="uid://cu7c2rnoxf8c2" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_3.png" id="10_0kveh"]
[ext_resource type="Texture2D" uid="uid://b7lios1hfc8o8" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_4.png" id="11_4yrvs"]
[ext_resource type="Texture2D" uid="uid://bcixw8kogtm7h" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_5.png" id="12_8ui40"]
[ext_resource type="Texture2D" uid="uid://c0lsu71ryfodt" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_6.png" id="13_uj5k6"]
[ext_resource type="Texture2D" uid="uid://dgbnw8dojd80u" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_7.png" id="14_1gcsx"]
[ext_resource type="Texture2D" uid="uid://bphijpvg30too" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_8.png" id="15_0r06m"]
[ext_resource type="Texture2D" uid="uid://d0x3vwe42ehkg" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_13.png" id="16_olp85"]
[ext_resource type="Texture2D" uid="uid://cofktt08gfjw5" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_14.png" id="17_yweof"]
[ext_resource type="Texture2D" uid="uid://bgteeqw8osjco" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_15.png" id="18_cw3me"]
[ext_resource type="Texture2D" uid="uid://knbpbjvgtoj6" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_16.png" id="19_084ai"]
[ext_resource type="Texture2D" uid="uid://dtxr5yi13yf1b" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_9.png" id="20_5g2oc"]
[ext_resource type="Texture2D" uid="uid://b4j4d0e7ynp7j" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_10.png" id="21_dq43h"]
[ext_resource type="Texture2D" uid="uid://cl4hb5li5yqb1" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_11.png" id="22_c2ppl"]
[ext_resource type="Texture2D" uid="uid://cpjlc8ylfk4ga" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_12.png" id="23_nrnha"]
[ext_resource type="Texture2D" uid="uid://cd75ufksqbcxm" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_19.png" id="26_qahx4"]
[ext_resource type="Texture2D" uid="uid://hstw1u5euhqs" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_20.png" id="27_u4kvw"]
[ext_resource type="Texture2D" uid="uid://bevnedrdk85o4" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_21.png" id="28_yf20c"]
[ext_resource type="Texture2D" uid="uid://btuouboyl5x8g" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_22.png" id="29_rh3w4"]
[ext_resource type="Texture2D" uid="uid://wj5qis8qrj50" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_23.png" id="30_unfrx"]
[ext_resource type="Texture2D" uid="uid://mpwhmsqtvt4j" path="res://assets/sprites/enemies/bosses/King_Crab/King_Crab_24.png" id="31_0rtcq"]
[ext_resource type="Script" uid="uid://2dtm6jeegr43" path="res://scripts/utils/node2d_factory.gd" id="31_ih4yw"]
[ext_resource type="PackedScene" uid="uid://cg4dofch48b6t" path="res://scenes/enemies/claw.tscn" id="32_5tar6"]
[ext_resource type="Script" uid="uid://dkb25vr64v37l" path="res://scripts/utils/hit_area_2d.gd" id="32_xn2er"]
[ext_resource type="Script" uid="uid://dliarx6jpwlho" path="res://scripts/enemies/king_crab/normal.gd" id="32_ybdky"]
[ext_resource type="Script" uid="uid://cofkmvw2auxcs" path="res://scripts/utils/hurt_area_2d.gd" id="33_0kveh"]
[ext_resource type="Script" uid="uid://bf7u0p2m2xilm" path="res://scripts/enemies/king_crab/roll.gd" id="33_ybdky"]
[ext_resource type="Script" uid="uid://b7vuy4jnk7w3b" path="res://scripts/enemies/king_crab/stop_roll.gd" id="35_1gcnt"]
[ext_resource type="Script" uid="uid://cbxxptwf8p0" path="res://scripts/enemies/king_crab/recall.gd" id="35_bdue4"]
[ext_resource type="Script" uid="uid://cttge5vyv66k2" path="res://scripts/enemies/king_crab/shoot.gd" id="36_bdue4"]
[ext_resource type="Script" uid="uid://db8lo56hyva45" path="res://scripts/enemies/king_crab/stun.gd" id="37_ih4yw"]
[ext_resource type="Script" uid="uid://b17bmh3pe38d6" path="res://scripts/enemies/king_crab/hurt.gd" id="40_4yrvs"]
[ext_resource type="Script" uid="uid://1oi8lur0a64f" path="res://scripts/enemies/states/dead.gd" id="41_4yrvs"]

[sub_resource type="SpriteFrames" id="SpriteFrames_t4cur"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_muf1s")
}, {
"duration": 1.0,
"texture": ExtResource("3_ybdky")
}, {
"duration": 1.0,
"texture": ExtResource("4_xn2er")
}, {
"duration": 1.0,
"texture": ExtResource("5_1gcnt")
}],
"loop": false,
"name": &"end_stun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_bdue4")
}, {
"duration": 1.0,
"texture": ExtResource("7_ih4yw")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_5tar6")
}, {
"duration": 1.0,
"texture": ExtResource("9_0qm4p")
}, {
"duration": 1.0,
"texture": ExtResource("10_0kveh")
}, {
"duration": 1.0,
"texture": ExtResource("11_4yrvs")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_qahx4")
}, {
"duration": 1.0,
"texture": ExtResource("27_u4kvw")
}, {
"duration": 1.0,
"texture": ExtResource("28_yf20c")
}, {
"duration": 1.0,
"texture": ExtResource("29_rh3w4")
}],
"loop": false,
"name": &"recall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_8ui40")
}, {
"duration": 1.0,
"texture": ExtResource("13_uj5k6")
}, {
"duration": 1.0,
"texture": ExtResource("14_1gcsx")
}, {
"duration": 1.0,
"texture": ExtResource("15_0r06m")
}],
"loop": true,
"name": &"roll",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_olp85")
}, {
"duration": 1.0,
"texture": ExtResource("17_yweof")
}, {
"duration": 1.0,
"texture": ExtResource("18_cw3me")
}, {
"duration": 1.0,
"texture": ExtResource("19_084ai")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_5g2oc")
}, {
"duration": 1.0,
"texture": ExtResource("21_dq43h")
}, {
"duration": 1.0,
"texture": ExtResource("22_c2ppl")
}, {
"duration": 1.0,
"texture": ExtResource("23_nrnha")
}],
"loop": false,
"name": &"stop_roll",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_unfrx")
}, {
"duration": 1.0,
"texture": ExtResource("31_0rtcq")
}],
"loop": true,
"name": &"stun",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1gcnt"]
radius = 23.0
height = 86.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5tar6"]
size = Vector2(61, 37)

[sub_resource type="CircleShape2D" id="CircleShape2D_4yrvs"]
radius = 21.2132

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iu7th"]
size = Vector2(44, 42)

[node name="KingCrab" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_ta3rv")
health = 500.0
spike = 50.0
movement_speed = 50.0
metadata/_custom_type_script = "uid://da4xpmamo1d7r"

[node name="Direction" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Direction"]
sprite_frames = SubResource("SpriteFrames_t4cur")
animation = &"normal"
flip_h = true

[node name="HitArea2D" type="Area2D" parent="Direction"]
visible = false
collision_layer = 0
collision_mask = 32
script = ExtResource("32_xn2er")
metadata/_custom_type_script = "uid://dkb25vr64v37l"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HitArea2D"]
position = Vector2(4, 4)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_1gcnt")
disabled = true

[node name="FrontRayCast2D" type="RayCast2D" parent="Direction"]
position = Vector2(0, 13)
target_position = Vector2(45, 0)

[node name="DownRayCast2D" type="RayCast2D" parent="Direction"]
position = Vector2(28, 13)
target_position = Vector2(0, 22)

[node name="BulletFactory" type="Marker2D" parent="Direction"]
position = Vector2(47, 5)
script = ExtResource("31_ih4yw")
product_packed_scene = ExtResource("32_5tar6")
target_container_name = &"Bullets"
metadata/_custom_type_script = "uid://2dtm6jeegr43"

[node name="RecallArea2D" type="Area2D" parent="Direction"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/RecallArea2D"]
position = Vector2(4.5, 5.5)
shape = SubResource("RectangleShape2D_5tar6")

[node name="HurtArea2D" type="Area2D" parent="Direction"]
collision_layer = 16
collision_mask = 0
script = ExtResource("33_0kveh")
metadata/_custom_type_script = "uid://cofkmvw2auxcs"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HurtArea2D"]
position = Vector2(3, 4)
shape = SubResource("CircleShape2D_4yrvs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_iu7th")

[node name="States" type="Node" parent="."]

[node name="Normal" type="Node" parent="States"]
script = ExtResource("32_ybdky")
metadata/_custom_type_script = "uid://scb0qkcj5epd"

[node name="Roll" type="Node" parent="States"]
script = ExtResource("33_ybdky")

[node name="StopRoll" type="Node" parent="States"]
script = ExtResource("35_1gcnt")

[node name="Shoot" type="Node" parent="States"]
script = ExtResource("36_bdue4")

[node name="Recall" type="Node" parent="States"]
script = ExtResource("35_bdue4")

[node name="Stun" type="Node" parent="States"]
script = ExtResource("37_ih4yw")

[node name="Hurt" type="Node" parent="States"]
script = ExtResource("40_4yrvs")

[node name="Dead" type="Node" parent="States"]
script = ExtResource("41_4yrvs")

[node name="ActionTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Direction/RecallArea2D" to="." method="_on_recall_area_2d_body_entered"]
